# ntt-tensorcore

./: .gitignore  CMakeLists.txt  README.md
include/: modular_arith.cuh  ntt.cuh  ntt_arbitrary.cuh  ntt_arbitrary_radix64.cuh
scripts/: build_icicle.sh
src/: mma_microbench.cu  ntt_basic.cu  ntt_four_step.cu  ntt_mma_arbitrary.cu  ntt_optimized.cu  ntt_optimized.cu.bak
tests/: benchmark.cu  debug_inner.cu  debug_rowmaj.cu  icicle_arbitrary_compare.cu  icicle_compare.cu  test_inner_ntt.cu  test_ntt.cu  timing_compare.cu
